Fixed the content area in Showcase so it resizes correctly when the page is first loaded in an RTL language.  Also fixed the alignment of the contents in RTL.  This patch is TBR.
Patch by: jlabanca



git-svn-id: https://google-web-toolkit.googlecode.com/svn/trunk@2377 8db76d5a-ed1c-0410-87a9-c151d255dfc7

--- a/samples/showcase/src/com/google/gwt/sample/showcase/public/Showcase.css
+++ b/samples/showcase/src/com/google/gwt/sample/showcase/public/Showcase.css
@@ -54,7 +54,6 @@
   background: #222222;
 }
 .Application-menu {
-	width: 180px;
   text-align: left;
 }
 
